refactor: handle BUY/SELL logic